--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,7 +7,7 @@
     <h1>Partners Feeds</h1>
       <% @articles.each do |article| %>
         <article class="feeds rss" resource="<%=article.url%>" typeof="schema:Article">
-      		<h3 property="schema:headline"><%= article.title %></h3>
+      		<h3 property="schema:headline"><a href=<%=article.url%>><%= article.title %></a></h3>
       		<p class="author" property="schema:author"> <%= article.author %></p>
       		<p class="category" property="schema:articleSection"> <%= article.articleSection %></p>
           <%if article.summary.blank?%>
