Modified style in h3 and link elements and added role main on articles page.

--- a/app/assets/stylesheets/od4d_stylesheet.css
+++ b/app/assets/stylesheets/od4d_stylesheet.css
@@ -198,7 +198,7 @@ h2 {
 }
 
 h3 {
-	font-size: 1.4em;
+	font-size: 1.2em;
 	font-family: 'Exo 2', sans-serif;
 	font-weight: 600;
 	color: #666666;
@@ -234,7 +234,7 @@ article {
 }
 
 a {
-	color: #963c1b;
+	color: #da6235;
 	text-decoration: none;
 }
 
