--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,7 @@
   <title>Open Data for Development - Feeds</title>
 <% end %>
 
-  <section class="main">
+  <section class="main" role="main">
     <br>
     <h1>Partners Feeds</h1>
       <% @articles.each do |article| %>
