Adjusting 'inLanguage' property of http://schema.org/Article, to follow the specification

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,8 +5,7 @@
   <section class="main" resource="#about" typeof="schema:Article" role="main">
     <h1 property="schema:headline">About the Project</h1>
     <meta property="schema:datePublished" content="2014-06-20"/>
-    <meta property="schema:wordCount" content="503"/>
-    <meta property="schema:inLanguage" content="English"/>
+    <meta property="schema:inLanguage" content="en-US"/>
     <meta property="schema:copyrightHolder" content="W3C"/>
     <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
     <meta property="schema:keywords" content="about;od4d"/>
