--- a/app/views/pages/how_to_create_a_semantic_page.html.erb
+++ b/app/views/pages/how_to_create_a_semantic_page.html.erb
@@ -6,7 +6,7 @@
     <h1 property="schema:headline">How to create a semantic page</h1>
     <meta property="schema:datePublished" content="2014-07-08"/>
     <meta property="schema:wordCount" content="503"/>
-    <meta property="schema:inLanguage" content="English"/>
+    <meta property="schema:inLanguage" content="en-US"/>
     <meta property="schema:copyrightHolder" content="W3C"/>
     <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
     <meta property="schema:keywords" content="howto;semantic;od4d"/>
