--- a/app/views/pages/terms_and_conditions.html.erb
+++ b/app/views/pages/terms_and_conditions.html.erb
@@ -5,8 +5,7 @@
   <section class="main" resource="#terms-and-conditions" typeof="schema:Article">
     <h1 property="schema:headline">General Terms and Conditions of use of the Portal OD4D - Open Data For Development</h1>
     <meta property="schema:datePublished" content="2014-07-08"/>
-    <meta property="schema:wordCount" content="503"/>
-    <meta property="schema:inLanguage" content="English"/>
+    <meta property="schema:inLanguage" content="en-US"/>
     <meta property="schema:copyrightHolder" content="W3C"/>
     <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
     <meta property="schema:keywords" content="terms;conditions;od4d"/>
