Adding the page that explains how to integrate with OD4D

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
         <li><a href="/about">ABOUT THE PROJECT</a></li>
         <li><a href="/articles">CONNECTED NETWORK</a></li>
         <li><a href="/how-to-create-a-semantic-page">HOW TO</a></li>
+        <li><a href="/how-to-integrate">HOW TO 2</a></li>
       </ul>
     </nav>
     <div class="contribute">
