--- a/app/assets/stylesheets/od4d.css
+++ b/app/assets/stylesheets/od4d.css
@@ -14,6 +14,11 @@ nav {
 	margin: 0px auto;
 }
 
+ol { 
+    list-style-type: decimal; 
+    list-style-position: inside; 
+}
+
 .logo {
 	max-width: 100%;
 	overflow: auto;
