Adjusting text layout in the 'how to integrate page'

--- a/app/views/pages/how_to_integrate_with_od4d.html.erb
+++ b/app/views/pages/how_to_integrate_with_od4d.html.erb
@@ -14,9 +14,7 @@
     <p>The project, started with an iniciative of W3C Brazil and the Economic Commission for Latin America and the Caribbean (ECLAC) had the intention of research emerging impacts and potentialities of open data for public policy in Latin America and the Caribbean and it was funded by the International Development and Research Center of Canada (IDRC).</p>
     <p>Due to the success of the OD4D initiative, the project will become a global network of research and experimentation, in order to encourage and boost, besides being a hub of connection between the actors who are in the Open Data environment today.</p>
     <p>This includes being an example itself of an Open Data website, of course. To know more about the technical details of this project you can acess it's GitHub repository or ask us about it. </p>
-    <p>You can be part of this Network. If you have a research institute or even an academic paper, you can let the network know by connecting your website to OD4D's Network using simple  <a href="http://www.w3.org/standards/semanticweb/data">linked data</a> concepts. </p>
-
-    <p>In case you  have no idea on how to work with Linked Data, <a resource="#how-to-create-a-semantic-page" href="/how-to-create-a-semantic-page">read this</a>.</p>
+    <p>You can be part of this Network. If you have a research institute or even an academic paper, you can let the network know by connecting your website to OD4D's Network using simple  <a href="http://www.w3.org/standards/semanticweb/data">linked data</a> concepts. In case you  have no idea on how to work with Linked Data, <a resource="#how-to-create-a-semantic-page" href="/how-to-create-a-semantic-page">read this</a>.</p>
     <p> You can start with step one and then jump in to the second step described below: </p>
     <p><ol>
         <li>You deliver RSS feeds 
