Removed turbolinks since its not bringing much benefits at this points and is causing some issues with prism.js

--- a/app/views/pages/how_to_create_a_semantic_page.html.erb
+++ b/app/views/pages/how_to_create_a_semantic_page.html.erb
@@ -1,6 +1,6 @@
 <% content_for :head do %>
-  <%= stylesheet_link_tag    'prism-only', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'prism-only', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'prism-only', media: 'all' %>
+  <%= javascript_include_tag 'prism-only' %>
   <title>Open Data for Development - How to create a semantic page</title>
 <% end %>
 
