--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -2,17 +2,41 @@
   <title>Open Data for Development - Home Page</title>
 <% end %>
 
-  <section resource="#about" typeof="schema:Article" role="main">
+  <section resource="#about" typeof="schema:Article" role="main" class="main">
     <meta property="schema:datePublished" content="2014-06-20"/>
     <meta property="schema:wordCount" content="503"/>
     <meta property="schema:inLanguage" content="English"/>
     <meta property="schema:copyrightHolder" content="W3C"/>
     <meta property="schema:license" content="http://creativecommons.org/licenses/by-sa/4.0/"/>
     <meta property="schema:keywords" content="about;od4d"/>
-    <div class="homeleft"> test 
-    </div>  
-   </section> 
-   <aside>
-      test
-   </aside>  
-  </section>
+    <section class="home-left">
+      <h1><a href="/about">Understand Open Data</a></h1> 
+      <section id="Video" resource="#od4d-about-video" property="schema:video" typeof="schema:VideoObject">
+        <meta property="schema:name" content="Open Government Data and OD4D "/>
+        <div class="video-container">
+          <iframe property="schema:embedUrl" src="//player.vimeo.com/video/69632849"> </iframe>
+        </div>
+      </section>
+      <h1>Feeds from our partners</h1>
+        <% @articles.each do |article| %>
+          <article class="feeds-home rss" resource="<%=article.url%>">
+            <h3><a href=<%=article.url%>><%= article.title %></a></h3>
+            <p class"rsshome"><em>Category:</em> <%= article.articleSection %> | <em>Author:</em> <%= article.author %><%if !article.datePublished.nil? then%> | <em>Date:</em> <%=article.datePublished.strftime("%m/%d/%Y") %>
+            <%end%></p>
+          </article>
+        <% end %>
+    </section>
+    <aside class="home-right">
+      <h1>Get Started</h1>
+      <h2><a href="/how-to-create-a-semantic-page">How to create a semantic page</a></h2>
+      <p>Understanting RDF concept </br>
+         RDFa and RDF: WTF? </br>
+         Examples
+      </p>
+      <h2><a href="/how-to-integrate">How to connect your site with us</a></h2>
+      <p>Understanting how to connect </br>
+         Read our terms and conditions </br>
+         Examples
+      </p>
+    </aside>  
+  </section>  
