--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,14 +18,14 @@
   <header role="banner">
    <section class="center-align">
     <div class="logo">
-      <%= image_tag("logo-od4d2.png", :alt => "Open Data for Development") %>
+      <a href="/"><%= image_tag("logo-od4d2.png", :alt => "Open Data for Development") %></a>
     </div>
     <nav class="center-nenu" role="navigation">
       <ul class="header-menu">
         <li><a href="/about">ABOUT THE PROJECT</a></li>
         <li><a href="/articles">CONNECTED NETWORK</a></li>
-        <li><a href="/how-to-create-a-semantic-page">HOW TO</a></li>
-        <li><a href="/how-to-integrate">HOW TO 2</a></li>
+        <li><a href="/how-to-create-a-semantic-page">BE SEMANTIC</a></li>
+        <li><a href="/how-to-integrate">CONNECT WITH US</a></li>
       </ul>
     </nav>
     <div class="contribute">
