--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,7 +6,7 @@
     <br>
     <h1>Partners Feeds</h1>
       <% @articles.each do |article| %>
-        <article class="feeds rss" resource="<%=article.url%>" typeof="schema:Article">
+        <article id="<%=article.slug%>" class="feeds rss" resource="<%=article.url%>" typeof="schema:Article">
       		<h3 property="schema:headline"><a href=<%=article.url%>><%= article.title %></a></h3>
       		<p class="author" property="schema:author">Author: <%= article.author %></p>
       		<p class="category" property="schema:articleSection"> <%= article.articleSection %></p>
@@ -20,11 +20,11 @@
           <%end%>
           <button class="button"><a property="schema:url" href=<%=article.url%>>Read More</a></button>
           <span>
-            <a href="<%= article.share_twitter %>">Twitter</a>
+            <a href="<%=article.share_twitter%>">Twitter</a>
             &nbsp;
-            <a href="<%= article.share_linkedin %>">Linkedin</a>
+            <a href="<%=article.share_linkedin%>">Linkedin</a>
             &nbsp;
-            <a href="<%= article.share_googleplus %>">Google+</a>
+            <a href="<%=article.share_googleplus%>">Google+</a>
           </span>
       	</article>
       <% end %>
