Header menu alignment fixed for small screens

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <div class="logo">
       <a href="/"><%= image_tag("logo-od4d2.png", :alt => "Open Data for Development") %></a>
     </div>
-    <nav class="center-nenu" role="navigation">
+    <nav class="center-menu" role="navigation">
       <ul class="header-menu">
         <li><a href="/about">ABOUT THE PROJECT</a></li>
         <li><a href="/articles">CONNECTED NETWORK</a></li>
