--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -19,12 +19,12 @@
             <p class="date" property="schema:datePublished" content="<%=article.datePublished.iso8601%>">Date: <%=article.datePublished.strftime("%m/%d/%Y") %></p>
           <%end%>
           <button class="button"><a property="schema:url" href=<%=article.url%>>Read More</a></button>
-          <span>
-            <a href="<%=article.share_twitter%>">Twitter</a>
+          <span class="social-buttons">
+            <a href="<%=article.share_twitter%>"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
             &nbsp;
-            <a href="<%=article.share_linkedin%>">Linkedin</a>
+            <a href="<%=article.share_linkedin%>"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
             &nbsp;
-            <a href="<%=article.share_googleplus%>">Google+</a>
+            <a href="<%=article.share_googleplus%>"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
           </span>
       	</article>
       <% end %>
