--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
         <li><a href="/articles">CONNECTED NETWORK</a></li>
         <li><a href="/how-to-create-a-semantic-page">BE SEMANTIC</a></li>
         <li><a href="/how-to-integrate">CONNECT WITH US</a></li>
+        <li><a href="/cases">PRACTICAL CASES</a></li>
       </ul>
     </nav>
 
