--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -20,41 +20,47 @@
     <section property="schema:description">
       <section id="Introduction">
         <h2>Introduction</h2>
-        <p>
-        Sharing governmental information in open, accessible and structured formats could substantially increase transparency and accountability in public policy design and implementation. Furthermore, it enables a broader engagement of civil society in these processes, fosters improvements in public administration’s efficiency and favors the generation of new services for citizens. Hence, opening data and the role that society’ can play in opening processes are key to promote a more effective public administration and prompt the development of a more equal knowledge economy.</p>
-        <p> Based on this premise, the <a href="http://www.w3c.org"><b>W3C Brazil</b></a> and the Economic Commission for Latin America and the Caribbean (<a href="http://www.eclac.org/"><b>ECLAC</b></a>) led a project on emerging <b>impacts and potentialities of open data for public policy in Latin America and the Caribbean</b>, funded by the International Development and Research Center of Canada (<a href="http://www.idrc.ca/EN/Pages/default.aspx"><b>IDRC</b></a>).
-        </p>
-        <p>
-        This project is identified by the brand <b>OD4D – Open Data for Development</b>. This initiative seeks to expand and produce further knowledge on open data and its potential to improve the quality of public policies in Latin America and the Caribbean. Furthermore, it aims at offering an interactive platform for dialogue and exchange among the different actors (governments, citizens, developers, academics, etc.) involved in the debate on open government data, at regional as well as  global level.
-        </p>
+          <p>The release of information in open, accessible and structured formats has the potential to substantially improve transparency and accountability regarding the development and implementation of public policies, as well as opening doors for wide participation of civil society in the process.</p>
+
+          <p>The availability of data and can bring greater recognition of the demands of the citizen and transform the way governments do business and public policies. This can be a tool for promoting social equality and effectiveness of public administration.</p>
+          
+          <p>The research project on the impact and potential of Open Data to Public Policy in Latin America and the Caribbean took place for two years - July 2011 to July 2013 - and was conducted by the W3C Brazil Office and the Economic Commission for Latin America and the Caribbean (<a href="http://www.eclac.org/"><b>ECLAC</b></a>), of the United Nations, and funded by the Canada's International Development Research Centre (<a href="http://www.idrc.ca/EN/Pages/default.aspx"><b>IDRC</b></a>).</p>
+
+          <p>The main goal was to contribute for the development of Open Data strategies that lead to accountability of public policies, supporting new analysis, creating new services and and fostering an equitable development of key industries, promoting a more inclusive knowledge economy in Latin America and the Caribbean. To achieve this goal, the potential of Open Data in public policy was investigated in 3 areas: transparency, new services and equitable development.</p>
+          <p>Strategies were adopted to sensitize governments and civil society regarding the usefulness and potential of Open Data to public policy. The research emerged that the use of Open Data can be a large contribution to the development of local economies.</p>
+          <p>There is the need to design a value chain of open data, considering its supply and demand. Finally, the project concluded that it would be important to comprehend a business model that could be sustainable in order to build a model of maturity in open data.</p>
+          <p>The strategy for the new website is to achieve relevant impact through actions and tangible products. This is crucial to get the attention of the community of experts, government officials and researchers to establish new strategies around open data. Open data works better through examples and cases. <em>Examples and cases means cyclic and mature processes.</em></p>
+          <p>To continue the project Open Data for Development and to extend it beyond this region, <a href="http://www.w3c.org"><em>W3C Brazil</em></a> proposes to reformulate the platform www.od4d.org to expand and <em>strengthen the existing community, collecting use cases, referencing best practices, promoting standards and relevant vocabularies, emphasizing the value of multilingual content in the existing platform.</em></p>
       </section>
     </section>
 
     <section property="schema:articleBody" class="articleContainer">
       <section id="Objectives" class="leftColumn">
         <h2>OD4D Objectives</h2>
-        <p>
-        The general objective of this research project is to contribute to the development of Open Data strategies leading to accountability, innovative services and effective public policies in strategic segments, thus promoting a more inclusive economy of knowledge in Latin America and the Caribbean. In order to achieve this, the project investigates the potential of Open Data in public policies on 3 fronts: <b>transparency, new services, and equitable development.</b>
-        </p>
+          <p>The new OD4D platform should be inclusive and accessible to provide a common space for the open data community, which will serve as a reference for individuals and institutions interested in putting into practice concepts of data on the web, open data and transparency.</p>
+          <p>The platform serves as a hub for investors, governments, institutions and individuals who intend to work together to create a collaborative network around the theme.</p>
+          <p>To this end, the overall objectives of the platform are:</p>
+          <ul>
+            <li>To aggregate initiatives of data on Web, from partner organizations and individuals, demonstrating in detail the step by step of structuring open data use cases;</li>
+            <li> To promote integration and dissemination of knowledge on open data using native languages;</li>
+            <li>To promote standards and specific vocabularies;</li>
+            <li>To be a reference about open data;</li>
+            <li><em>To be an open data case itself.</em></li>
+          </ul>
+          <p>The expected final result will be <em>the use of a Open Data website as a case for Open Data, connecting networks with innovative resources to foster the Open Data value chain.</em></p>
       </section>
 
       <section id="Specific-Tasks" class="rightColumn">
-        <h2>OD4D 6 specific tasks</h2>
+        <h2>Goals</h2>
         <ul>
-          <li>To <b>map out</b> the main initiatives in Latin America and the Caribbean for structured economic, social and environmental data sharing and to design a methodological framework to examine the relationship between opening data and the quality of public policies.</li>
-          <li> To study and discuss alternative strategies to foster <b>technical training</b> in governmental agencies and observatories in the region, thus implementing open data repositories for the design, monitoring and assessment of public policies.</li>
-          <li>
-          To support <b>research networks</b> in Latin America and theCaribbean in producing new information and creating innovative applications and services based on open data.
-          </li>
-          <li>
-          To <b>examine</b> the relationship between more inclusive economic development and the opening of data in key economic segments.
-          </li>
-          <li>
-          To <b>raise awareness</b> among the community of public policy makers, public servants and researches of the potential of Open Data and appropriate strategies for its successful implementation.
-          </li>
-          <li>
-          To <b>assess the potential</b> of Open Data strategies in the design and implementation of public policies aimed at promoting economic development and social inclusion in Latin American countries and in the Caribbean.
-          </li>
+          <li>The od4d.org new platform will serve as connection among regional open data initiatives in Latin America, Africa, Asia and the Caribbean.</li>
+          <li>The site will be a case of Open Data itself, transforming it's data in one open repository of knowledge, always respecting privacy guidelines.</li>
+          <li>The new OD4D platform will bring a new experience for the user of the Open Data for Development Network. Through a multilingual website, we expect that it will connect people and foster the open data ecosystem.</li>
+          
+
+ 
+
+
         </ul>
       </section>
 
