--- a/app/assets/stylesheets/od4d.css
+++ b/app/assets/stylesheets/od4d.css
@@ -88,7 +88,7 @@ ol {
 	padding: 0px;
 	margin: 0px auto;
 	margin-top: 10px;
-}
+    }
 }
 
 .center-align	{
@@ -134,13 +134,6 @@ body {
 	background-color: #ffffff;
 	margin: 0px;
 }
-/*
-header {
-	background-color: #f6963f;
-    padding: 15px;
-}
-*/
-
 
 footer a {
 	color: #ffffff;
@@ -154,7 +147,7 @@ footer a {
 	padding: 30px 15px 0px 15px;
 	margin: 0px auto;
 	position: relative;
-	z-index: -1;
+
 	}
 
 h1 {
@@ -325,8 +318,7 @@ article.rss {
 	padding-bottom: 15px;
 }
 
-p.author
-{
+p.author {
 	font-size: .875em;
 	font-family: 'Exo 2', sans-serif;
 	font-weight: 400;
@@ -335,8 +327,7 @@ p.author
 	line-height: 1.3em;
 }
 
-p.category
-{
+p.category {
 	font-size: .875em;
 	font-family: 'Exo 2', sans-serif;
 	font-weight: 400;
@@ -352,6 +343,7 @@ p.summary {
 	margin: 6px 0px 0px 0px;
 	line-height: 1.5em;
 }
+
 p.rsshome {
 	display: inline-block;
 	font-size: .875em;
