Modified style of cases page like articles page. The social buttons don't work yet, it can't be referenced when shared.

--- a/app/assets/stylesheets/od4d.css
+++ b/app/assets/stylesheets/od4d.css
@@ -402,3 +402,12 @@ button a {
    .feeds {position: relative; width: 92%;}
 
 }
+
+.cases article h2 {
+	color: #666666;
+}
+
+.cases article .case {
+	width:311px;
+	height:161px;
+}
