--- a/app/views/pages/cases.html.erb
+++ b/app/views/pages/cases.html.erb
@@ -4,13 +4,15 @@
 
 <section class="main" role="main">
 
-  <section class"cases">
+  <section class="cases">
     <h1>Practical Cases</h1>
 
-    <article typeof="schema:Article">
+    <article id="road-to-planetary-synapse" typeof="schema:Article" class="rss" resource="#road-to-planetary-synapse">
       <h2 property="schema:headline">Road to Planetary Synapse</h2>
+      <p class="author" property="schema:author">Author: KW Foundation</p>
+      <p class="date" property="schema:datePublished">Date: 09/16/2013</p>
 
-      <div property="schema:description">
+      <div property="schema:articleBody">
         <p>
           KW Foundation is a Family nonprofit that researches and develops knowledge management within a democratic and
           inclusive digital society.
@@ -30,13 +32,22 @@
 
         <p><em>What would we need to generate a synapse planetary and take the next step in human sustainable evolution?</em></p>
       </div>
+      <p class="social-buttons">
+        <a href="https://twitter.com/intent/tweet?url=/cases#road-to-planetary-synapse#&text=Road%20to%20Planetary%20Synapse&via=OD4D"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
+        &nbsp;
+        <a href="http://www.linkedin.com/shareArticle?mini=true&url=#road-to-planetary-synapse/&title=Road%20to%20Planetary%20Synapse&source=OD4D.org"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
+        &nbsp;
+        <a href="https://plusone.google.com/_/+1/confirm?hl=en&url=#road-to-planetary-synapse"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
+      </p>
     </article>
 
-    <article typeof="schema:Article">
+    <article id="developing-latin-america-2012" typeof="schema:Article" class="rss" resource="#developing-latin-america-2012">
       <h2 property="schema:headline">Developing Latin America 2012</h2>
+      <p class="author" property="schema:author">Author: OD4D</p>
+      <p class="date" property="schema:datePublished">Date: 12/03/2012</p>
 
-      <div property="schema:description">
-        <p><img src="http://blog.zerial.org/wp-content/uploads/2012/11/hackathontop.png" width="311" height="161"></p>
+      <div property="schema:articleBody">
+        <p><img class="case" src="http://blog.zerial.org/wp-content/uploads/2012/11/hackathontop.png"></p>
 
         <p>The second edition of <a href="http://2012.desarrollandoamerica.org/">Developing Latin America 2012</a>, a regional hackathon
            lasting 36 hours in which 8 countries - <em>Argentina, Bolivia, Brazil, Costa Rica, Chile, Mexico, Peru,
@@ -54,13 +65,22 @@
           with each country selecting the three issues most relevant for their specific context.
         </p>
       </div>
+      <p class="social-buttons">
+        <a href="https://twitter.com/intent/tweet?url=#developing-latin-america-2012/&text=Developing%20Latin%20America%202012&via=OD4D"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
+        &nbsp;
+        <a href="http://www.linkedin.com/shareArticle?mini=true&url=#developing-latin-america-2012/&title=Developing%20Latin%20America%202012&source=OD4D.org"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
+        &nbsp;
+        <a href="https://plusone.google.com/_/+1/confirm?hl=en&url=#developing-latin-america-2012"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
+      </p>
     </article>
 
-    <article typeof="schema:Article">
+    <article id="open-311" typeof="schema:Article" class="rss" resource="#open-311">
       <h2 property="schema:headline">Open 311</h2>
+      <p class="author" property="schema:author">Author: OD4D</p>
+      <p class="date" property="schema:datePublished">Date: 10/11/2012</p>
 
-      <div property="schema:description">
-        <p><img src="http://www.od4d.org/wp-content/uploads/2012/10/image-Open-3113.jpg"></p>
+      <div property="schema:articleBody">
+        <p><img class="case" src="http://www.od4d.org/wp-content/uploads/2012/10/image-Open-3113.jpg"></p>
 
         <p>
           3-1-1 is a number well known in some cities of the United States and Canada, where citizens can notify the
@@ -80,13 +100,22 @@
           Transparency also ensures that everyone’s voice is heard and in-turn encourages more participation”.
         </p>
       </div>
+      <p class="social-buttons">
+        <a href="https://twitter.com/intent/tweet?url=/#open-311/&text=Open%20311&via=OD4D"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
+        &nbsp;
+        <a href="http://www.linkedin.com/shareArticle?mini=true&url=#open-311/&title=Open%20311&source=OD4D.org"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
+        &nbsp;
+        <a href="https://plusone.google.com/_/+1/confirm?hl=en&url=#open-311"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
+      </p>
     </article>
 
-    <article typeof="schema:Article">
+    <article id="brazilian-open-data-portal" typeof="schema:Article" class="rss" resource="#brazilian-open-data-portal">
       <h2 property="schema:headline">Brazilian Open Data Portal</h2>
+      <p class="author" property="schema:author">Author: Danielle Pereira</p>
+      <p class="date" property="schema:datePublished">Date: 10/10/2012</p>
 
-      <div property="schema:description">
-        <p><img src="http://www.od4d.org/wp-content/uploads/2012/10/dados1.jpg" width="311" height="161"></p>
+      <div property="schema:articleBody">
+        <p><img class="case" src="http://www.od4d.org/wp-content/uploads/2012/10/dados1.jpg"></p>
 
         <p>
           A data repository, the <a href="http://dados.gov.br/">dados.gov.br</a> portal aggregates <a href="http://dados.gov.br/dataset">82 pubic datasets</a> formerly scattered across the Internet.
@@ -109,13 +138,22 @@
           free software.
         </p>
       </div>
+      <p class="social-buttons">
+        <a href="https://twitter.com/intent/tweet?url=/#brazilian-open-data-portal/&text=Brazilian%20Open%20Data%20Portal&via=OD4D"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
+        &nbsp;
+        <a href="http://www.linkedin.com/shareArticle?mini=true&url=#brazilian-open-data-portal/&title=Brazilian%20Open%20Data%20Portal&source=OD4D.org"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
+        &nbsp;
+        <a href="https://plusone.google.com/_/+1/confirm?hl=en&url=#brazilian-open-data-portal"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
+      </p>
     </article>
 
-    <article typeof="schema:Article">
+    <article id="apps-for-democracy" typeof="schema:Article" class="rss" resource="#apps-for-democracy">
       <h2 property="schema:headline">Apps for Democracy</h2>
+      <p class="author" property="schema:author">Author: Yaso</p>
+      <p class="date" property="schema:datePublished">Date: 10/09/2012</p>
 
-      <div property="schema:description">
-        <p><img src="http://www.od4d.org/wp-content/uploads/2012/10/appfordemocracy.png" width="311" height="161"></p>
+      <div property="schema:articleBody">
+        <p><img class="case" src="http://www.od4d.org/wp-content/uploads/2012/10/appfordemocracy.png"></p>
 
         <p>
           The idea was born in 2008, due to DC’s government willing to ensure that both society, governments and
@@ -139,6 +177,13 @@
           for parking information.
         </p>
       </div>
+      <p class="social-buttons">
+        <a href="https://twitter.com/intent/tweet?url=/#apps-for-democracy/&text=Apps%20for%20Democracy&via=OD4D"><%= image_tag("logo-twitter.png", :alt => "Share with Twitter", :size => "24x24") %></a>
+        &nbsp;
+        <a href="http://www.linkedin.com/shareArticle?mini=true&url=#apps-for-democracy/&title=Apps%20for%20Democracy&source=OD4D.org"><%= image_tag("logo-linkedin.png", :alt => "Share with LinkedIn", :size => "24x24") %></a>
+        &nbsp;
+        <a href="https://plusone.google.com/_/+1/confirm?hl=en&url=#apps-for-democracy"><%= image_tag("logo-gplus.png", :alt => "Share with Google+", :size => "24x24") %></a>
+      </p>
     </article>
   </section>
 </section>
